fixed vertical alignment on intro slide

--- a/css/style.css
+++ b/css/style.css
@@ -184,8 +184,12 @@ p {
 }
 
 #introSlide {
-	margin-top: 250px;
-	position: relative;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
 	text-align: center;
 	z-index: 10;
 }
@@ -193,6 +197,8 @@ p {
 #introSlideContent {
 	width: 55%;
 	padding: 20px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #introSlide h1, #introSlide h2, #introSlide p {
